feat: configure Swagger OpenAPI, enforce TiDB datasource, optimize HikariCP, and integrate Gemini API